--- a/main_window_black.ui
+++ b/main_window_black.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>963</width>
-    <height>777</height>
+    <width>966</width>
+    <height>900</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -63,7 +63,7 @@ QMenu::item:selected {
       <x>0</x>
       <y>-10</y>
       <width>971</width>
-      <height>771</height>
+      <height>891</height>
      </rect>
     </property>
     <property name="sizePolicy">
@@ -113,6 +113,10 @@ QListWidget {
 	border-color: rgb(60, 85, 109);
 	gridline-color:  rgb(60, 85, 109);
 font: 10pt &quot;Segoe MDL2 Assets&quot;;
+}
+QListView::item {
+    height: 30px;
+	width: 30px;
 }
 QLineEdit {
 	background-color: rgb(149, 165, 166);
@@ -528,8 +532,8 @@ QMenuBar::item:pressed
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>711</width>
-             <height>601</height>
+             <width>721</width>
+             <height>701</height>
             </rect>
            </property>
            <property name="styleSheet">
@@ -1120,7 +1124,7 @@ font: 10pt &quot;Segoe MDL2 Assets&quot;;</string>
                   </property>
                  </widget>
                 </item>
-                <item row="13" column="1">
+                <item row="14" column="1">
                  <widget class="QPushButton" name="Add_armor">
                   <property name="minimumSize">
                    <size>
@@ -1136,6 +1140,26 @@ font: 10pt &quot;Segoe MDL2 Assets&quot;;</string>
                   </property>
                   <property name="text">
                    <string>Add armor</string>
+                  </property>
+                 </widget>
+                </item>
+                <item row="13" column="1">
+                 <widget class="QPushButton" name="Add_armors_to_items">
+                  <property name="minimumSize">
+                   <size>
+                    <width>200</width>
+                    <height>50</height>
+                   </size>
+                  </property>
+                  <property name="maximumSize">
+                   <size>
+                    <width>16777215</width>
+                    <height>16777215</height>
+                   </size>
+                  </property>
+                  <property name="text">
+                   <string>Add armors to
+items list</string>
                   </property>
                  </widget>
                 </item>
@@ -1155,8 +1179,8 @@ font: 10pt &quot;Segoe MDL2 Assets&quot;;</string>
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>711</width>
-             <height>641</height>
+             <width>721</width>
+             <height>701</height>
             </rect>
            </property>
            <property name="styleSheet">
@@ -1944,7 +1968,7 @@ border: none;</string>
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>963</width>
+     <width>966</width>
      <height>25</height>
     </rect>
    </property>
