--- a/main_window_black.ui
+++ b/main_window_black.ui
@@ -313,13 +313,13 @@ QMenuBar::item:pressed
             <property name="minimumSize">
              <size>
               <width>80</width>
-              <height>30</height>
+              <height>80</height>
              </size>
             </property>
             <property name="maximumSize">
              <size>
               <width>16777215</width>
-              <height>50</height>
+              <height>80</height>
              </size>
             </property>
             <property name="styleSheet">
@@ -332,11 +332,11 @@ border: none;</string>
             </property>
             <property name="icon">
              <iconset>
-              <normaloff>../res/ppatreon.png</normaloff>../res/ppatreon.png</iconset>
+              <normaloff>res/ppatreon.png</normaloff>res/ppatreon.png</iconset>
             </property>
             <property name="iconSize">
              <size>
-              <width>100</width>
+              <width>180</width>
               <height>100</height>
              </size>
             </property>
